Fix article combobox overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1163,9 +1163,9 @@ section {
 /*--------------------------------------------------------------
 # article
 --------------------------------------------------------------*/
-.article {
-  /* overflow: auto; */
-}
+/* .article {
+  overflow: auto;
+} */
 
 .article:before {
   content: "";
